# rag-project

./: .env  ENTERPRISE_RAG_KIT_PLAN.md  RAG_PRODUCTION_PLAN.md  README.md  TEST.md  pyproject.toml
app/: chat_console.py  main.py
app/core/: config.py  ollama.py  qdrant.py
app/db/: qdrant.py  sql.py  sql_loader.py
app/schemas/: chat.py
app/services/: ingest.py  ingest_ocr.py  rag.py
