[project]
name = "rag-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sy.pt", email = "phamtiensy8696@gmail.com"},
]
dependencies = ["requests>=2.33.0", "langchain>=1.2.13", "chromadb>=1.5.5", "ollama>=0.6.1", "sentence-transformers>=5.3.0", "langchain-community>=0.4.1", "langchain-ollama>=1.0.1", "fastapi>=0.135.2", "qdrant-client>=1.17.1", "langchain-qdrant>=1.1.0", "pyodbc>=5.3.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
